Fixed Portfolio Image Alignment

--- a/1/style.css
+++ b/1/style.css
@@ -90,6 +90,7 @@ hr {
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    margin-bottom: 40px;
 }
 
 .flexcontainer {
@@ -100,6 +101,7 @@ hr {
 }
 
 .works div {
+    display: flex;
     width: 300px;
     height: 150px;
     background-color: rgba(15, 10, 10, 0.03);
@@ -108,8 +110,9 @@ hr {
 }
 
 .works div img {
-    max-height: 100%;
-    min-width: auto;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .works div:hover {
@@ -128,7 +131,8 @@ section {
     width: 300px;
     height: 100px;
     background-color: rgba(15, 10, 70, 0.05);
-    border-radius: 5%;
+    border-top-right-radius: 5%;
+    border-left: 2px solid rgba(8, 8, 255, 0.8);
 }
 
 .reviews div p {
@@ -139,4 +143,22 @@ section {
 .reviews div span {
     padding: 5px;
     align-self: flex-end;
+}
+
+footer {
+    display: flex;
+    margin-bottom: 0px;
+    padding: 0;
+    background-color: rgba(15, 10, 70, 0.05);
+    min-height: 100px;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+}
+
+.contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20%;
 }
